[gd_scene load_steps=18 format=2]

[ext_resource path="res://image/enemy_2_body.png" type="Texture" id=1]
[ext_resource path="res://scene/Enemy_B.gd" type="Script" id=2]
[ext_resource path="res://scene/Explosion2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/EnmBullet_B.tscn" type="PackedScene" id=4]
[ext_resource path="res://sound/魔王魂  風02.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 6.66666

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion2:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 85.3359

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/enemy_1_canon.png-ab26ffd4fe3cb5f00ed7a0e2316113be.stex"

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.0534188, 0.173077, 0.305556, 0.401709, 1 )
colors = PoolColorArray( 0.846678, 0.853516, 0.803505, 1, 0.580078, 0.432793, 0.432793, 1, 0.500081, 0.389488, 0.533203, 1, 1, 0.902725, 0.00390625, 1, 0.779297, 0.772162, 0.706238, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.307692, 0.583333, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.307692, 0.307692, 0.307692, 1, 0.459402, 0.459402, 0.459402, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
trail_color_modifier = SubResource( 10 )
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 2 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -5, 0 )
initial_velocity = 47.05
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 39.51
linear_accel_random = 1.0
radial_accel = -14.12
radial_accel_random = 0.92
angle = 720.0
angle_random = 1.0
scale = 3.5
scale_random = 1.0
color_ramp = SubResource( 8 )
hue_variation = 0.09
anim_speed = 4.02
anim_speed_random = 0.8

[sub_resource type="StreamTexture" id=12]
load_path = "res://.import/Explosion.png-76b5fba602864bb227f7b39ca1d3217b.stex"

[node name="Enemy_B" type="KinematicBody2D" groups=[
"enemy",
]]
scale = Vector2( 3, 3 )
collision_layer = 256
collision_mask = 129
script = ExtResource( 2 )
Bullet = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bom = SubResource( 3 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Canon" type="Sprite" parent="."]
visible = false
position = Vector2( -10, 0 )
texture = SubResource( 5 )
offset = Vector2( 7.33333, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="Explosion2" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.552941 )
material = SubResource( 6 )
amount = 61
lifetime = 0.7
process_material = SubResource( 11 )
texture = SubResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
pitch_scale = 0.89

[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
